@@ -41,7 +41,7 @@ Esto es un aviso
         <li><a id="seccion_productos" href="/productos/productos/"> <div class="<%= params[:seccion] == 'productos' ? 'seleccionado' : ''%>" > Productos </div> </a> </li>
 <!--        <li><a id="seccion_trueke" href="/caja/albarans"> <div class="<%# params[:seccion] == 'trueke' ? 'seleccionado' : ''%>" > Trueke </div> </a> </li> -->
         <li><a id="seccion_tesoreria" href="/tesoreria/caja/"> <div class="<%= params[:seccion] == 'tesoreria' ? 'seleccionado' : ''%>" > Tesorería </div> </a> </li>
-        <li><a id="seccion_admin" href="/admin/configuracion/"> <div class="<%= params[:seccion] == 'admin' ? 'seleccionado' : ''%>" > Admin </div> </a> </li>
+        <li><a id="seccion_admin" href="/admin/avisos/"> <div class="<%= params[:seccion] == 'admin' ? 'seleccionado' : ''%>" > Admin </div> </a> </li>
     </ul></div>
     <div id="estado">
       <%= params[:seccion].capitalize + " - " + controlador_rotulo(params[:controller]) %>
@@ -78,7 +78,7 @@ Esto es un aviso
   <!-- Contenido de cada accion -->
   <%= @content_for_layout %>
 
-  <br/>
+  <br/><br/>
 
 </div>
 
