@@ -5,25 +5,17 @@ scheduler = Rufus::Scheduler.start_new
 #  Test.check_thumbnails!
 #end
 
+# Chequeo en el arranque
+Avisos.depositos_no_devueltos
+Avisos.proxima_devolucion_depositos
+Avisos.proximos_vencimientos_facturas
+Avisos.facturas_vencidas
+
 # Comprueba las facturas
 scheduler.every("6h") do
-  Factura.vencidas.each do |factura|
-    diferencia = (factura.fecha_vencimiento - Time.now.to_date).abs.to_s
-    valores = { :objeto => "Factura", :objeto_id => factura.id, :url => "/productos/factura/listado" }
-    aviso = Avisos.first(:conditions => valores )
-    aviso ||= Avisos.new(valores)
-    aviso.mensaje = "Hay una factura vencida hace " + diferencia + " días, que aún no está pagada!"
-    aviso.criticidad = 3
-    aviso.save
-  end
-  Factura.proximos_vencimientos.each do |factura|
-    diferencia = (Time.now.to_date - factura.fecha_vencimiento).abs.to_s
-    valores = { :objeto => "Factura", :objeto_id => factura.id, :url => "/productos/factura/listado" }
-    aviso = Avisos.first(:conditions => valores )
-    aviso ||= Avisos.new(valores)
-    aviso.mensaje = "Una factura vencerá en " + diferencia + " días"
-    aviso.criticidad = 2
-    aviso.save
-  end
+  Avisos.depositos_no_devueltos
+  Avisos.proxima_devolucion_depositos
+  Avisos.proximos_vencimientos_facturas
+  Avisos.facturas_vencidas
 end
 
