@@ -12,6 +12,7 @@
   * Corrige descuadre de listados (con overflow de contenido)
   * En el volcado a XLS permite meter los sublistados como hojas
   * Volcado a XLS de sublistados (lineas de albaran)
+  * Scheduller de avisos
 
 2011-11-24 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.4
 
